trunk/Archive2/a0/e6f6ee34a915af/output
main.cpp:3:10: error: no member named 'cotut' in namespace 'std'; did you mean 'cout'?
    std::cotut << "Hello World";
    ~~~~~^~~~~
         cout
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/iostream:61:18: note: 'cout' declared here
  extern ostream cout;          /// Linked to standard output
                 ^
main.cpp:5:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
1 warning and 1 error generated.
